--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -542,7 +542,7 @@ jobs:
 #        if: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/tags/s') }}
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: digitranshq
           password: ${{ secrets.DOCKER_PASSWORD }}
       # - name: Docker push staging
       #   if: ${{ github.ref == 'refs/heads/main' }}
